--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
       .banner h1 {
-        font-family: 'Arial', sans-serif; /* Changement de police */
-        color: beige; /* Changement de couleur */
+        font-family: 'Arial', sans-serif; 
+        color: beige; 
       }
       .banner h2 {
-        font-family: 'Georgia', serif; /* Changement de police */
-        color: floralwhite; /* Changement de couleur */
+        font-family: 'Georgia', serif; 
+        color: floralwhite; 
       }
     </style>
   </head>
@@ -48,11 +48,12 @@
     </div>
 
     <div id="apply-section">
-<div data-tf-live="01HTMEKG4H1NDRWGCM60B1G3HZ"></div>
-<script src="https://embed.typeform.com/next/embed.js"></script>
+      <div data-tf-live="01HTMEKG4H1NDRWGCM60B1G3HZ"></div>
+      <script src="https://embed.typeform.com/next/embed.js"></script>
+    </div>
 
-
-</body>
+  </body>
 </html>
+
 
 
