--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
       <div class="cards">
         <div class="card">
-          <img src="images/Théanglais.png" alt="English Tea">
+          <img src="images/théanglais.png" alt="English Tea">
           <h3>English Tea</h3>
         </div>
        
         <div class="card">
-          <img src="images/Théfrançais.jpeg" alt="French tea">
+          <img src="images/théfrançais.jpeg" alt="French tea">
           <h3>French tea</h3>
         </div>
         
         <div class="card">
-          <img src="images/Théjaponais.webp" alt="Japanese tea">
+          <img src="images/théjaponais.webp" alt="Japanese tea">
           <h3>Japanese tea</h3>
         </div>
       </div>
