--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </div>
        
         <div class="card">
-          <img src="images/théfrançais.jpeg" alt="French tea">
+          <img src="images/théfrançais.png" alt="French tea">
           <h3>French tea</h3>
         </div>
         
         <div class="card">
-          <img src="images/théjaponais.webp" alt="Japanese tea">
+          <img src="images/théjaponais.png" alt="Japanese tea">
           <h3>Japanese tea</h3>
         </div>
       </div>
@@ -54,6 +54,5 @@
 
   </body>
 </html>
-
 
 
