--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
       <div class="cards">
         <div class="card">
-          <img src="images/thévert.jpeg" alt="yellow tea">
+          <img src="images/thévert.jpg" alt="yellow tea">
           <h3>yellow tea</h3>
         </div>
        
         <div class="card">
-          <img src="images/théblanc.jpeg" alt="white tea">
+          <img src="images/théblanc.jpg" alt="white tea">
           <h3>white tea</h3>
         </div>
         
         <div class="card">
-          <img src="images/thénoir.jpeg" alt="black tea">
+          <img src="images/thénoir.jpg" alt="black tea">
           <h3>black tea</h3>
         </div>
       </div>
