--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
       <div class="cards">
         <div class="card">
-          <img src="images/thévert.png" alt="yellow tea">
+          <img src="images/théj.jpeg" alt="yellow tea">
           <h3>yellow tea</h3>
         </div>
        
         <div class="card">
-          <img src="images/théblanc.png" alt="white tea">
+          <img src="images/thée.jpeg" alt="white tea">
           <h3>white tea</h3>
         </div>
          
         <div class="card">
-          <img src="images/thénoir.png" alt="black tea">
+          <img src="images/théeee.jpeg" alt="black tea">
           <h3>black tea</h3>
         </div>
       </div>
@@ -54,8 +54,6 @@
 
   </body>
 </html>
-
-
 
 
 
